Add launch4j-maven-plugin configuration